# ru-soft-registry-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml  scrapy.cfg  seperate.py  tmp.md  validate-urls.py
ru_soft_registry/: items.py  middlewares.py  pipelines.py  settings.py
ru_soft_registry/spiders/: ru_soft_registry.py
